eerste en tweede pagina

--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> <!--dit is de homepage van mijn site-->
-<html> <!--dit is het html element-->
+<!DOCTYPE html> 
+<html> 
 <head> 
     <title>Binair stelsel</title>
 <meta charset="utf-8">
@@ -8,6 +8,6 @@
     Uitleg over binaire stelsel
 
     <a href = index.html>Home</a> <!--link terug naar homepage-->
-    
+
 </body>
 </html>
