--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -9,5 +9,9 @@
 
     <a href = index.html>Home</a> <!--link terug naar homepage-->
 
+    <br>
+    <br>
+
+    <img src="binaire stelsel.jpg" alt="Binair stelsel">
 </body>
 </html>
