--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <ul>
         <li><a href= index.html>Home</a></li>
+        <li><a href= binairstelsel.html>Binair stelsel</a></li>
+        <li><a href= kleurmodellen.html>Kleurmodellen</a></li>
     </ul>
     <br>
     <br>
