--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -7,6 +7,12 @@
 <body>
     Uitleg over binaire stelsel
 
+    <ul>
+        <li><a href= index.html>Home</a></li>
+        <li><a href= binairstelsel.html>Binair stelsel</a></li>
+        <li><a href= kleurmodellen.html>Kleurmodellen</a></li>
+    </ul>
+    
     <a href = index.html>Home</a> <!--link terug naar homepage-->
 
     <br>
