--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -14,7 +14,7 @@
         <li><a href= kleurmodellen.html>Kleurmodellen</a></li>
     </ul>
 
-    <img scr="kleurmodellen.png" alt="kleurmodellen "
+    <img scr="kleurmodellen.jpeg" alt="kleurmodellen "
     
 </body>
 </html>
