--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     Uitleg over binaire stelsel
-    <link rel="stylesheet" href="opmaak.css"
+    <link rel="stylesheet" href="opmaak.css">
     <ul>
         <li><a href= index.html>Home</a></li>
         <li><a href= binairstelsel.html>Binair stelsel</a></li>
