--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     Hier komt mijn eerste tekst
-<link rel="stylesheet" href="opmaak.css"
+<link rel="stylesheet" href="opmaak.css">
     <ul>
         <li><a href= index.html>Home</a></li>
         <li><a href= binairstelsel.html>Binair stelsel</a></li>
