--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     Uitleg over Kleurmodellen 
-    <link rel="stylesheet" href="opmaak.css"
+    <link rel="stylesheet" href="opmaak.css">
     <br>
     <ul>
         <li><a href= index.html>Home</a></li>
