--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
     
     <br>
     <br>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Balk</title>
+    <style>
+        /* Stijl voor de menubalk */
+        .menubalk {
+            background-color: #f0f0f0; /* Lichtgrijze achtergrondkleur */
+            overflow: hidden;
+        }
 
+        /* Stijl voor de menu-items */
+        .menubalk a {
+            float: left;
+            display: block;
+            color: #333; /* Tekstkleur */
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        /* Stijl voor de menu-items bij hover (wanneer de muis erover beweegt) */
+        .menubalk a:hover {
+            background-color: #ddd; /* Achtergrondkleur bij hover */
+        }
+    </style>
+</head>
+<body>
+
+<div class="menubalk">
+    <a href="#home">Home</a>
+    <a href="#binair">Binair Stelsel</a>
+    <a href="#kleurmodellen">Kleurmodellen</a>
+</div>
 
     <br>
     <br>
