--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     </style>
 </head>
 <body>
-<ul></ul>
+
 <div class="menubalk">
     <a href="#home">Home</a>
     <a href="#binair">Binair Stelsel</a>
     <a href="#kleurmodellen">Kleurmodellen</a>
-</ul>
+<a href="Compressietechnieken"> Compressietechnieken</a>
+
 </div>
 
     <br>
