--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <a href="#home">Home</a>
     <a href="#binair">Binair Stelsel</a>
     <a href="#kleurmodellen">Kleurmodellen</a>
-<a href="Compressietechnieken"> Compressietechnieken</a>
+<a href="#Compressietechnieken"> Compressietechnieken</a>
 
 </div>
 
