--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 
 <div class="menubalk">
-    <a href="#home">Home</a>
-    <a href="#binair">Binair Stelsel</a>
-    <a href="#kleurmodellen">Kleurmodellen</a>
+    <a href="index.html">Home</a>
+    <a href="binairstelsel.html">Binair Stelsel</a>
+    <a href="kleurmodellen.html">Kleurmodellen</a>
 <a href="#Compressietechnieken"> Compressietechnieken</a>
 </div>
 
@@ -30,7 +30,8 @@
 
     <img src="afbeelding welkom.jpg" alt="Welkom">
 
-    versie 1.4
+    versie 1.5
+
 </body>
 </html>
 
