--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -7,11 +7,13 @@
 <body>
     Uitleg over binaire stelsel
     <link rel="stylesheet" href="opmaak.css">
-    <ul>
-        <li><a href= index.html>Home</a></li>
-        <li><a href= binairstelsel.html>Binair stelsel</a></li>
-        <li><a href= kleurmodellen.html>Kleurmodellen</a></li>
-    </ul>
+   
+    <div class="menubalk">
+        <a href="index.html">Home</a>
+        <a href="binairstelsel.html">Binair Stelsel</a>
+        <a href="kleurmodellen.html">Kleurmodellen</a>
+    <a href="#Compressietechnieken"> Compressietechnieken</a>
+    </div>
     
     
 
