--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -8,11 +8,13 @@
     Uitleg over Kleurmodellen 
     <link rel="stylesheet" href="opmaak.css">
     <br>
-    <ul>
-        <li><a href= index.html>Home</a></li>
-        <li><a href= binairstelsel.html>Binair stelsel</a></li>
-        <li><a href= kleurmodellen.html>Kleurmodellen</a></li>
-    </ul>
+    
+    <div class="menubalk">
+        <a href="index.html">Home</a>
+        <a href="binairstelsel.html">Binair Stelsel</a>
+        <a href="kleurmodellen.html">Kleurmodellen</a>
+    <a href="#Compressietechnieken"> Compressietechnieken</a>
+    </div>
 
     <img src="kleurmodellen.jpeg" alt="kleurmodellen "
     
