--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="index.html">Home</a>
     <a href="binairstelsel.html">Binair Stelsel</a>
     <a href="kleurmodellen.html">Kleurmodellen</a>
-<a href="#Compressietechnieken"> Compressietechnieken</a>
+<a href="Compressietechnieken"> Compressietechnieken</a>
 </div>
 
     <br>
