--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -13,7 +13,7 @@
         <a href="index.html">Home</a>
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
-    <a href="#Compressietechnieken"> Compressietechnieken</a>
+    <a href="Compressietechnieken"> Compressietechnieken</a>
     </div>
 
     <img src="kleurmodellen.jpeg" alt="kleurmodellen "
