--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -15,8 +15,9 @@
         <a href="kleurmodellen.html">Kleurmodellen</a>
     <a href="Compressietechnieken"> Compressietechnieken</a>
     </div>
-
+versie 1.7
     <img src="kleurmodellen.jpeg" alt="kleurmodellen "
+    
     
 </body>
 </html>
