--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -13,11 +13,11 @@
     <a href="Compressietechnieken"> Compressietechnieken</a>
     </div>
     
-    
-
+    <head>Uitleg binairstelsel</head>
+<p>we gaan uitleggen </p>
     <br>
     <br>
-1.7 
+1.8
     <img src="binaire stelsel.jpg" alt="Binair stelsel">
 </body>
 </html>
