--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -14,19 +14,12 @@
     </div>
     
     <head>Uitleg binairstelsel</head>
-<p>De basis van het binairstelsel </p>
-Het binaire stelsel is een fundamenteel numeriek systeem dat slechts twee cijfers gebruikt: 0 en 1. Dit systeem vormt de basis van digitale informatieverwerking en is essentieel in computers en elektronica. Om het binair stelsel te begrijpen, moeten we kijken naar hoe getallen worden weergegeven en opgebouwd.
-
-Elke positie in een binaire getal vertegenwoordigt een macht van 2. Beginnend vanaf de rechterkant neemt elke positie toe met een macht van 2. Bijvoorbeeld, het binaire getal "1101" vertegenwoordigt:
-
-(1 * 2^3) + (1 * 2^2) + (0 * 2^1) + (1 * 2^0) = 8 + 4 + 0 + 1 = 13
-
-Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, enzovoort. Dit proces maakt het mogelijk om elk positief geheel getal in het binair stelsel weer te geven.
-
-Het binair stelsel is van cruciaal belang in de digitale wereld omdat computers informatie verwerken met behulp van elektrische signalen die als 0 (uit) en 1 (aan) worden geïnterpreteerd. Door binaire getallen te combineren, kunnen complexe berekeningen en gegevensopslag worden uitgevoerd.
-    <br>
+<p>basis van het binairstelsel</p>
+Het binair stelsel, ook wel bekend als het basis-2 stelsel, is een numeriek systeem dat slechts twee cijfers gebruikt: 0 en 1.
+<br>
     <br>
 1.9
+
     <img src="binaire stelsel.jpg" alt="Binair stelsel">
 </body>
 </html>
