--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -14,7 +14,7 @@
     </div>
     
     <head>Uitleg binairstelsel</head>
-<p>basis van het binairstelsel</p>
+<p>basis van het binairstelsel
 Het binair stelsel, ook wel bekend als het basis-2 stelsel, is een numeriek systeem dat slechts twee cijfers gebruikt: 0 en 1.In tegenstelling tot ons dagelijkse decimale stelsel, waarin we tien cijfers hebben (0 tot 9), werkt het binair stelsel met twee basisgetallen.
 
 De essentie van het binair stelsel ligt in de weergave van getallen door middel van machten van 2. Elke positie in een binair getal vertegenwoordigt een macht van 2, beginnend vanaf de rechterkant. Bijvoorbeeld, het binaire getal "1101" vertegenwoordigt:
@@ -22,6 +22,7 @@ De essentie van het binair stelsel ligt in de weergave van getallen door middel 
 (1 * 2^3) + (1 * 2^2) + (0 * 2^1) + (1 * 2^0) = 8 + 4 + 0 + 1 = 13
 
 Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, enzovoort. Op deze manier kunnen we elk positief geheel getal in het binair stelsel vertegenwoordigen.
+</p>
 <br>
     <br>
 1.10
