--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -13,9 +13,10 @@
     <a href="Compressietechnieken"> Compressietechnieken</a>
     </div>
     
+
     <head>Uitleg binairstelsel</head>
-<p>basis van het binairstelsel
-Het binair stelsel, ook wel bekend als het basis-2 stelsel, is een numeriek systeem dat slechts twee cijfers gebruikt: 0 en 1.In tegenstelling tot ons dagelijkse decimale stelsel, waarin we tien cijfers hebben (0 tot 9), werkt het binair stelsel met twee basisgetallen.
+<p>basis van het binairstelsel</p>
+</p> binair stelsel, ook wel bekend als het basis-2 stelsel, is een numeriek systeem dat slechts twee cijfers gebruikt: 0 en 1.In tegenstelling tot ons dagelijkse decimale stelsel, waarin we tien cijfers hebben (0 tot 9), werkt het binair stelsel met twee basisgetallen.
 
 De essentie van het binair stelsel ligt in de weergave van getallen door middel van machten van 2. Elke positie in een binair getal vertegenwoordigt een macht van 2, beginnend vanaf de rechterkant. Bijvoorbeeld, het binaire getal "1101" vertegenwoordigt:
 
@@ -25,7 +26,7 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 </p>
 <br>
     <br>
-1.11
+1.12
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel">
 </body>
