--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -24,9 +24,11 @@ De essentie van het binair stelsel ligt in de weergave van getallen door middel 
 
 Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, enzovoort. Op deze manier kunnen we elk positief geheel getal in het binair stelsel vertegenwoordigen.
 </p>
+<p> Toepassing binairstelsel</p>
+<p> Computers en digitale apparaten: Alle computers en digitale apparaten, van eenvoudige rekenmachines tot geavanceerde servers, gebruiken het binair stelsel als de grondslag voor informatieopslag en verwerking. Inwendig worden gegevens en instructies als binaire getallen weergegeven.</p>
 <br>
     <br>
-1.12
+1.13
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel">
 </body>
