--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -28,8 +28,8 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p> Computers en digitale apparaten: Alle computers en digitale apparaten, van eenvoudige rekenmachines tot geavanceerde servers, gebruiken het binair stelsel als de grondslag voor informatieopslag en verwerking. Inwendig worden gegevens en instructies als binaire getallen weergegeven.</p>
 <br>
     <br>
-1.13
+1.14
 
-    <img src="binaire stelsel.jpg" alt="Binair stelsel">
+    <img src="binaire stelsel.jpg" alt="Binair stelsel" width="300px" height="500px">
 </body>
 </html>
