binair stelsel uitleg

--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -26,9 +26,10 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 </p>
 <p> Toepassing binairstelsel</p>
 <p> Computers en digitale apparaten: Alle computers en digitale apparaten, van eenvoudige rekenmachines tot geavanceerde servers, gebruiken het binair stelsel als de grondslag voor informatieopslag en verwerking. Inwendig worden gegevens en instructies als binaire getallen weergegeven.</p>
+<p> Programmering: In softwareontwikkeling wordt binaire code gebruikt om computerprogramma's te maken. Programmeurs schrijven instructies in binaire vorm, die later door de computer worden uitgevoerd. Hexadecimale notatie wordt soms gebruikt om binaire getallen compacter weer te geven.</p>
 <br>
     <br>
-1.14
+1.15 
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel" width="600px" height="500px">
 </body>
