--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -27,9 +27,11 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p> Toepassing binairstelsel</p>
 <p> Computers en digitale apparaten: Alle computers en digitale apparaten, van eenvoudige rekenmachines tot geavanceerde servers, gebruiken het binair stelsel als de grondslag voor informatieopslag en verwerking. Inwendig worden gegevens en instructies als binaire getallen weergegeven.</p>
 <p> Programmering: In softwareontwikkeling wordt binaire code gebruikt om computerprogramma's te maken. Programmeurs schrijven instructies in binaire vorm, die later door de computer worden uitgevoerd. Hexadecimale notatie wordt soms gebruikt om binaire getallen compacter weer te geven.</p>
+<p>Geheugenopslag: Binaire opslag maakt het mogelijk om gegevens efficiënt en betrouwbaar op te slaan. Dit omvat harde schijven, SSD's, geheugenkaarten en andere opslagapparaten. Gegevens worden opgeslagen in de vorm van binaire bits.</p>
+<p> Communicatie: Bij gegevensoverdracht via digitale netwerken, zoals internet, worden gegevens vaak in binaire vorm verzonden. Dit maakt snelle en betrouwbare communicatie mogelijk.</p>
 <br>
     <br>
-1.15 
+1.16
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel" width="300px" height="300px">
 </body>
