--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <br>
     
 
-    <img src="afbeelding welkom.jpg" alt="Welkom">
+    <img src="afbeelding welkom.jpg" width="300px" height="300px"
 
-    versie 1.7
+    versie 1.8
 
 </body>
 </html>
