--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -32,10 +32,15 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p> Communicatie: Bij gegevensoverdracht via digitale netwerken, zoals internet, worden gegevens vaak in binaire vorm verzonden. Dit maakt snelle en betrouwbare communicatie mogelijk.</p>
 <br>
     
-<embed https://games.penjee.com/binary-bonanza/
+<a href="https://games.penjee.com/binary-bonanza/">link 1 </a>
+<a href="https://games.penjee.com/binary-bonanza/">Ga naar een andere pagina 2 </a>
+<a href="https://games.penjee.com/binary-bonanza/" target="_blank">Open link in nieuw venster</a>
+
+
+
 
 <br>
-1.18
+1.19
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel" width="300px" height="300px">
 </body>
