--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -32,10 +32,10 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p> Communicatie: Bij gegevensoverdracht via digitale netwerken, zoals internet, worden gegevens vaak in binaire vorm verzonden. Dit maakt snelle en betrouwbare communicatie mogelijk.</p>
 <br>
     
-
+<embed src="https://games.penjee.com/binary-bonanza/" type="spelletje ">
 
 <br>
-1.18
+1.19
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel" width="300px" height="300px">
 </body>
