--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -32,7 +32,7 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p> Communicatie: Bij gegevensoverdracht via digitale netwerken, zoals internet, worden gegevens vaak in binaire vorm verzonden. Dit maakt snelle en betrouwbare communicatie mogelijk.</p>
 <br>
     
-<embed src="https://youtu.be/xS8U6eoXhNg?si=acRc8BtI3oIWg7n9" type="filmpje ">
+<embed src="https://youtu.be/TeQH_Bei8iU?si=fkAk1wONNBhnuS1R" type="filmpje ">
 
 <br>
 1.20
