--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <a href="Compressietechnieken"> Compressietechnieken</a>
 </div>
 
+<P>Hoi ik ben Nol van Reijn en ik ben 15 jaar. Ik zit op het Vlietland college in leiden en ik moet deze site maken voor het vak informatica en op deze site staat ook uitleg over het binairstelsel en de kleurmodellen </P>
     <br>
     <br>
     
