--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -11,5 +11,5 @@
         <a href="index.html">Home</a>
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
-    <a href="Compressietechnieken"> Compressietechnieken</a>
+    <a href="compressietechnieken.html"> Compressietechnieken</a>
     </div>
