--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -11,7 +11,7 @@
         <a href="index.html">Home</a>
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
-    <a href="Compressietechnieken"> Compressietechnieken</a>
+    <a href="compressietechnieken.html"> Compressietechnieken</a>
     </div>
 
 <Head>Uitleg over het kleurmodellen</Head>
