--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -10,7 +10,7 @@
         <a href="index.html">Home</a>
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
-    <a href="Compressietechnieken"> Compressietechnieken</a>
+    <a href="compressietechnieken.html"> Compressietechnieken</a>
     </div>
     
 
