--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="index.html">Home</a>
     <a href="binairstelsel.html">Binair Stelsel</a>
     <a href="kleurmodellen.html">Kleurmodellen</a>
-<a href="Compressietechnieken"> Compressietechnieken</a>
+<a href="compressietechnieken.html"> Compressietechnieken</a>
 </div>
 
 <P>Hoi ik ben Nol van Reijn en ik ben 15 jaar. Ik zit op het Vlietland college in leiden en ik moet deze site maken voor het vak informatica en op deze site staat ook uitleg over het binairstelsel, kleurmodellen, Compressietechnieken en de werking van de computer ook staan er filmpjes bij elke uitleg zodat je het nog beter kan begrijpen. </P>
