--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -31,9 +31,11 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p>Geheugenopslag: Binaire opslag maakt het mogelijk om gegevens efficiënt en betrouwbaar op te slaan. Dit omvat harde schijven, SSD's, geheugenkaarten en andere opslagapparaten. Gegevens worden opgeslagen in de vorm van binaire bits.</p>
 <p> Communicatie: Bij gegevensoverdracht via digitale netwerken, zoals internet, worden gegevens vaak in binaire vorm verzonden. Dit maakt snelle en betrouwbare communicatie mogelijk.</p>
 <br>
-    
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7Cd1q3Mob2I" frameborder="0" allowfullscreen></iframe>
+
 <br>
-1.21
+1.22
 
     <img src="binaire stelsel.jpg" alt="Binair stelsel" width="300px" height="300px">
 </body>
