--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -30,9 +30,9 @@
 
 
 
-versie 1.10
+versie 1.11
 
-<iframe width="560" height="315" src="https://youtu.be/-b2pAEHEQZc?si=ZkX5RwFo5-tpURTc" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://youtube.com/embed/ZkX5RwFo5-tpURTc" frameborder="0" allowfullscreen></iframe>
 
 
     <img src="kleurmodellen.jpeg" alt="kleurmodellen "
