--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -13,3 +13,9 @@
         <a href="kleurmodellen.html">Kleurmodellen</a>
     <a href="compressietechnieken.html"> Compressietechnieken</a>
     </div>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/cKaRxd6tdHY" frameborder="0" allowfullscreen></iframe>
+
+
+</body>
+</html>
