--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -14,9 +14,11 @@
     <a href="compressietechnieken.html"> Compressietechnieken</a>
     </div>
 
+<head> Uitleg over compressietechnieken</head>
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ip1Bg5Po5ek" frameborder="0" allowfullscreen></iframe>
 
-1.1 
+1.2
 
 </body>
 </html>
