--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -34,9 +34,13 @@
 
 
 
+
+1.4 
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ip1Bg5Po5ek" frameborder="0" allowfullscreen></iframe>
 
-1.4
+    <img src="CPU.jpeg" width="300px" height="300px"
+
 
 </body>
 </html>
