--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -11,7 +11,8 @@
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
     <a href="compressietechnieken.html"> Compressietechnieken</a>
-    </div>
+    <a href="Werking van computer.html"> Werking van computer</a>  
+</div>
     
 
     
