--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -12,7 +12,8 @@
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
     <a href="compressietechnieken.html"> Compressietechnieken</a>
-    </div>
+    <a href="Werking van computer.html"> Werking van computer</a>
+</div>
 
 <Head>Uitleg over het kleurmodellen</Head>
 <p>RGB (Rood, Groen, Blauw):</p>
