--- a/Werking van computer.html
+++ b/Werking van computer.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html element-->
 <head> 
-    <title>Binair stelsel</title>
-<meta charset="utf-8">
+    <title>Het eerste begin</title>
+    <meta charset="utf-8">
 </head>
 <body>
     <link rel="stylesheet" href="opmaak.css">
+    <br>
     <div class="menubalk">
         <a href="index.html">Home</a>
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
     <a href="compressietechnieken.html"> Compressietechnieken</a>
-    <a href="Werking van computer.html"> Werking van computer</a>  
+    <a href="Werking van computer.html"> Werking van computer</a>
 </div>
