--- a/Werking van computer.html
+++ b/Werking van computer.html
@@ -31,6 +31,6 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QZwneRb-zqA" frameborder="0" allowfullscreen></iframe>
 
-<img src="werking,jpeg" width="300px" height="300px">
+<img src="werking.jpg" width="300px" height="300px">
 
 1.5
