--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -12,7 +12,7 @@
         <a href="binairstelsel.html">Binair Stelsel</a>
         <a href="kleurmodellen.html">Kleurmodellen</a>
     <a href="compressietechnieken.html"> Compressietechnieken</a>
-    <a href="Werking van computer.html"> Werking van computer</a>
+    <a href="CPU.html"> CPU </a>
 </div>
 
 <Head>Uitleg over het kleurmodellen</Head>
