--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -33,13 +33,13 @@
 <p>Tekstcompressie is het proces waarbij de omvang van tekstbestanden wordt verminderd zonder de essentiële informatie te verliezen. Dit kan worden bereikt door herhalingen en patronen in de tekst te identificeren en te vervangen door kortere representaties. Populaire tekstcompressie-algoritmen omvatten ZIP en gzip voor lossless compressie, en algoritmen zoals Lempel-Ziv-Welch (LZW) voor lossy compressie.</p>
 
 
-<p>Lees meer over bestanden en mappen comprimeren op deze <a href="https://informaticalessen.be/besturingssystemen/bestanden-en-mappen-comprimeren/#:~:text=Gegevens%20comprimeren%20of%20datacompressie%20is,inneemt%20op%20je%20harde%20schijf." target="_blank">pagina</a>.</p>
+<p>Lees meer over de compressietechnieken <a href="https://informaticalessen.be/besturingssystemen/bestanden-en-mappen-comprimeren/#:~:text=Gegevens%20comprimeren%20of%20datacompressie%20is,inneemt%20op%20je%20harde%20schijf." target="_blank">pagina</a>.</p>
 
 
 
 
 
-1.6
+1.7
 
     <iframe width="350" height="350" src="https://www.youtube.com/embed/Ip1Bg5Po5ek" frameborder="0" allowfullscreen></iframe>
 
