--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -29,9 +29,9 @@
 <p>Resolutie verwijst naar het aantal pixels dat een digitale afbeelding bevat en wordt gemeten in pixels per inch (PPI) of dots per inch (DPI). Een hogere resolutie betekent dat er meer pixels per inch zijn, wat resulteert in een scherpere en gedetailleerdere afbeelding. Lagere resoluties worden vaak gebruikt voor webafbeeldingen, waar 72 PPI gebruikelijk is. Hogere resoluties, zoals 300 DPI of meer, zijn nodig voor afdrukken om een goede afdrukkwaliteit te garanderen. Een hogere resolutie zorgt ervoor dat elk detail in een afbeelding helder en scherp wordt weergegeven.
 </p>
 
+<p>Lees meer over de kleurmodellen op deze <a href="https://www.fabervlaggen.nl/aanleverspecificaties/kleurmodellen-rgb-cmyk-pms" target="_blank">pagina</a>.</p>
 
-
-versie 1.12
+1.14
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cKaRxd6tdHY" frameborder="0" allowfullscreen></iframe>
 
