--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -33,6 +33,8 @@ Hierbij staat de meest rechtse positie voor 2^0, de volgende voor 2^1, dan 2^2, 
 <p> Communicatie: Bij gegevensoverdracht via digitale netwerken, zoals internet, worden gegevens vaak in binaire vorm verzonden. Dit maakt snelle en betrouwbare communicatie mogelijk.</p>
 <br>
 
+<p>Lees meer over het binairstelsel op deze <a href="https://junioriot.nl/binair/" target="_blank">pagina</a>.</p>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7Cd1q3Mob2I" frameborder="0" allowfullscreen></iframe>
 <br>
 1.22 
