--- a/CPU.html
+++ b/CPU.html
@@ -28,7 +28,7 @@
 <p>4. Opslag (Storage):</p>
 <p>Opslag is het proces waarbij gegevens op lange termijn worden bewaard, zodat ze kunnen worden opgeroepen en opnieuw kunnen worden gebruikt wanneer dat nodig is. Computers hebben verschillende soorten opslagapparaten, zoals harde schijven, solid-state drives (SSD's), USB-stations en optische schijven. Deze apparaten slaan gegevens op in de vorm van elektrische ladingen, magnetische signalen of andere fysieke representaties. Het opgeslagen geheugen kan worden gebruikt om bestanden, programma's en systeeminformatie op te slaan.</p>
 
-<p>Lees meer over CPU op deze <a href="https://www.computer-bestel.nl/gamers-blog/alles-wat-je-moet-weten-over-de-cpu/144." target="_blank">pagina</a>.</p>
+<p>Lees meer over CPU op deze <a href="https://wikikids.nl/CPU" target="_blank">pagina</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QZwneRb-zqA" frameborder="0" allowfullscreen></iframe>
 
