--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     <a href="kleurmodellen.html">Kleurmodellen</a>
 <a href="compressietechnieken.html"> Compressietechnieken</a>
 <a href="CPU.html"> CPU</a>
+<a href="dropdown.html"> CPU</a>
 </div>
 
 <P>Hoi ik ben Nol van Reijn en ik ben 15 jaar. Ik zit op het Vlietland college in leiden en ik moet deze site maken voor het vak informatica en op deze site staat ook uitleg over het binairstelsel, kleurmodellen, Compressietechnieken en CPU ook staan er filmpjes bij elke uitleg zodat je het nog beter kan begrijpen. </P>
     <br>
     <br>
     
-1.8
+1.9
 
 
 
