--- a/dropdown.html
+++ b/dropdown.html
@@ -1,30 +1,32 @@
-<!DOCTYPE html> <!--dit is de homepage van mijn site-->
-<html> <!--dit is het html element-->
-<head> 
-    <title>Het eerste begin</title>
-    <meta charset="utf-8">
-    <ul class="top-level-menu">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li>
-            <a href="#">Offices</a>
-            <ul class="second-level-menu">
-                <li><a href="#">Chicago</a></li>
-                <li><a href="#">Los Angeles</a></li>
-                <li>
-                    <a href="#">New York</a>
-                    <ul class="third-level-menu">
-                        <li><a href="#">Information</a></li>
-                        <li><a href="#">Book a Meeting</a></li>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Jobs</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Seattle</a></li>
-            </ul>
-        </li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</head>
-<body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Mijn pagina </title>
+    </head>
+    <body>
+
+        <ul class="top-level-menu">
+            <li><a href="dropdown.html"><index class=></index></a></li>
+            <li><a href="dropdown.html"> class="htm"></dropdown></a></li>
+            <li>
+                <a href="index.html">Offices</a>
+                <ul class="second-level-menu">
+                    <li><a href="index.html">Chicago</a></li>
+                    <li><a href="index.html">Los Angeles</a></li>
+                    <li>
+                        <a href="index.html">New York</a>
+                        <ul class="third-level-menu">
+                            <li><a href="index.html">Information</a></li>
+                            <li><a href="index.html">Book a Meeting</a></li>
+                            <li><a href="binairstelsel.html">Testimonials</a></li>
+                            <li><a href="kleurmodellen.html">Jobs</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="index.html">Seattle</a></li>
+                </ul>
+            </li>
+            <li><a href="dropdown.html">Contact</a></li>
+        </ul>
+    </body>
+</html>
 
