--- a/dropdown.html
+++ b/dropdown.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> Mijn pagina </title>
+        <link rel="stylesheet" href="opmaak.css">
     </head>
     <body>
 
