--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     </style>
 </head>
 <body>
+    
+    <link rel="stylesheet" href="opmaak.css">
+
     <div class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -35,7 +38,7 @@
     <br>
     <br>
     
-1.13
+1.14
 
 
 
