--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html> <!--dit is de homepage van mijn site-->
-<html> <!--dit is het html element-->
-<head> 
-    <title>Het eerste begin</title>
-<meta charset="utf-8">
-</head>
-<body>
-<link rel="stylesheet" href="opmaak.css">
-   
-    <br>
-    <br>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Balk</title>
-    <style>    
-    </style>
-</head>
-<body>
-    
+<html> <!-- dit is het-html element-->
+<head>
+    <title> homepage </title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="opmaak.css">
+</head>
+<body>
+    <ul class="top-level-menu">
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="binairstelsel.html">binairstelsel</a></li>
+        <li>
+            <a href="kleurmodellen.html">kleurmodellen</a>
+            <ul class="second-level-menu">
+                <li><a href="Compressietechnieken.html">Compressietechnieken</a></li>
+                <li><a href="werking van een computer.html">werking van een computer</a></li>
+                <li>
+                    <a href="index.html">Home2</a>
+                    <ul class="third-level-menu">
+                        <li><a href="binairstelsel.html">binairstelsel2</a></li>
+                        <li><a href="kleurmodellen.html">kleurmodellen2</a></li>
+                        <li><a href="Compressietechnieken.html">Compressietechnieken2</a></li>
+                        <li><a href="werking van een computer.html">werking van een computer2</a></li>
+                    </ul>
+                </li>
+                <li><a href="index.html">Home3</a></li>
+            </ul>
+        </li>
+        <li><a href="index.html">Home4</a></li>
+    </ul>
 
-    <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <div class="dropdown">
-            <button class="dropbtn">Services 
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="#service1">Service 1</a>
-                <a href="#service2">Service 2</a>
-                <a href="#service3">Service 3</a>
-            </div>
-        </div> 
-        <a href="#contact">Contact</a>
-    </div>
-
-<P>Hoi ik ben Nol van Reijn en ik ben 15 jaar. Ik zit op het Vlietland college in leiden en ik moet deze site maken voor het vak informatica en op deze site staat ook uitleg over het binairstelsel, kleurmodellen, Compressietechnieken en CPU ook staan er filmpjes bij elke uitleg zodat je het nog beter kan begrijpen. </P>
+    hier komt mijn eerste tekst
+versie 1.27
     <br>
     <br>
     
-1.14
+1.15
 
 
 
