--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <ul class="top-level-menu">
         <li><a href="index.html">homepage</a></li>
         <li>
-            <a href="kleurmodellen.html">3 lagen model</a>
+            <a href="">3 lagen model</a>
             <ul class="second-level-menu">
-                <li><a href="compressietechnieken.html">toepassingen laag </a></li>
-                <li><a href="werking van een computer.html">logische laag </a></li>
+                <li><a href="toepassingenlaag.html">toepassingen laag </a></li>
+                <li><a href="logischelaag.html">logische laag </a></li>
                 <li>
-                    <a href="index.html">fysieke laag </a>
+                    <a href="fysiekelaag.html">fysieke laag </a>
                     <ul class="third-level-menu">
                         <li><a href="binairstelsel.html">CPU</a></li>
                         <li><a href="kleurmodellen.html"> geheugen </a></li>
-                        <li><a href="Compressietechnieken.html">Compressietechnieken2</a></li>
-                        <li><a href="werking van een computer.html">werking van een computer2</a></li>
+            
                     </ul>
                 </li>
             </ul>
@@ -35,7 +34,7 @@
  Hoi ik ben Nol van Reijn en ben 16 jaar oud. Ik maak deze website voor een opdracht van informatica. Ik zit op het vlietlandcollege. De website word altijd verbeterd dus het kan iedere keer verandert zijn als je er weer bent. 
  
  
- versie 1.19
+ versie 1.20
  
  <img src="afbeelding welkom.jpg" width="300px" height="300px"
 
