--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li>
                     <a href="fysiekelaag.html">fysieke laag </a>
                     <ul class="third-level-menu">
-                        <li><a href="binairstelsel.html">CPU</a></li>
+                        <li><a href="CPU.html">CPU</a></li>
                         <li><a href="kleurmodellen.html"> geheugen </a></li>
             
                     </ul>
@@ -34,7 +34,7 @@
  Hoi ik ben Nol van Reijn en ben 16 jaar oud. Ik maak deze website voor een opdracht van informatica. Ik zit op het vlietlandcollege. De website word altijd verbeterd dus het kan iedere keer verandert zijn als je er weer bent. 
  
  
- versie 1.20
+ versie 1.21
  
  <img src="afbeelding welkom.jpg" width="300px" height="300px"
 
