--- a/CPU.html
+++ b/CPU.html
@@ -5,15 +5,25 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <link rel="stylesheet" href="opmaak.css">
-    <br>
-    <div class="menubalk">
-        <a href="index.html">Home</a>
-        <a href="binairstelsel.html">Binair Stelsel</a>
-        <a href="kleurmodellen.html">Kleurmodellen</a>
-    <a href="compressietechnieken.html"> Compressietechnieken</a>
-    <a href="CPU.html"> CPU</a>
-</div>
+    <ul class="top-level-menu">
+        <li><a href="index.html">homepage</a></li>
+        <li>
+            <a href="">3 lagen model</a>
+            <ul class="second-level-menu">
+                <li><a href="toepassingenlaag.html">toepassingen laag </a></li>
+                <li><a href="logischelaag.html">logische laag </a></li>
+                <li>
+                    <a href="fysiekelaag.html">fysieke laag </a>
+                    <ul class="third-level-menu">
+                        <li><a href="CPU.html">CPU</a></li>
+                        <li><a href="geheugen.html"> geheugen </a></li>
+            
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        
+    </ul>
 
 <head> Uitleg over de Werking van computera</head>
 <p>1. Invoer (Input):</p>
