--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -9,6 +9,26 @@
 
 </head>
 <body>
+    <ul class="top-level-menu">
+        <li><a href="index.html">homepage</a></li>
+        <li>
+            <a href="">3 lagen model</a>
+            <ul class="second-level-menu">
+                <li><a href="toepassingenlaag.html">toepassingen laag </a></li>
+                <li><a href="logischelaag.html">logische laag </a></li>
+                <li>
+                    <a href="fysiekelaag.html">fysieke laag </a>
+                    <ul class="third-level-menu">
+                        <li><a href="CPU.html">CPU</a></li>
+                        <li><a href="geheugen.html"> geheugen </a></li>
+            
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        
+    </ul>
+
     fysieke
 </body>
 </html>
