--- a/CPU.html
+++ b/CPU.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html> <!--dit is de homepage van mijn site-->
-<html> <!--dit is het html element-->
-<head> 
-    <title>Het eerste begin</title>
+<html> <!-- dit is het-html element-->
+<head>
+
     <meta charset="utf-8">
+    <link rel="stylesheet" href="opmaak.css">
 </head>
 <body>
     <ul class="top-level-menu">
@@ -44,6 +45,6 @@
 
 <img src="werking.jpg" width="300px" height="300px">
 
-1.7
+1.8
 
 
