--- a/CPU.html
+++ b/CPU.html
@@ -25,8 +25,10 @@
         </li>
         
     </ul>
+</body>
 
-<head> Uitleg over de Werking van computera</head>
+<head> Uitleg over de Werking van computer</head>
+<body>
 <p>1. Invoer (Input):</p>
 <p>Invoer is het eerste stadium van de computerwerking. Het omvat het verzamelen van gegevens en opdrachten van externe bronnen en ze naar de computer brengen. Dit proces wordt meestal uitgevoerd met behulp van invoerapparaten, zoals toetsenborden, muizen, microfoons, camera's, scanners en sensoren. Invoerapparaten zetten fysieke acties of gegevens om in elektrische signalen die de computer kan begrijpen.</p>
 
@@ -44,7 +46,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QZwneRb-zqA" frameborder="0" allowfullscreen></iframe>
 
 <img src="werking.jpg" width="300px" height="300px">
+</body>
+1.9
 
-1.8
+</html>
 
 
