--- a/logischelaag.html
+++ b/logischelaag.html
@@ -35,6 +35,8 @@
 <br>
 <br>
 <br>
-    logischelaagen
+<head> Uitleg over de toepassingenlaag</head>
+
+<p>1.Wat is de toepassingen laag ?:</p>
 </body>
 </html>
