--- a/logischelaag.html
+++ b/logischelaag.html
@@ -35,8 +35,9 @@
 <br>
 <br>
 <br>
-<head> Uitleg over de toepassingenlaag</head>
-
-<p>1.Wat is de toepassingen laag ?:</p>
+Uitleg over de toepassingen
+<br>
+<br>
+1. Wat is de toepassingenlaag ? 
 </body>
 </html>
