--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -34,6 +34,10 @@
     <br>
     <br>
     <br>  
-    fysieke
+    Uitleg over de fysiekelaag
+    <br>
+    <br>
+    1. Wat is de fysiekelaag ? 
+</body>
 </body>
 </html>
