--- a/logischelaag.html
+++ b/logischelaag.html
@@ -35,9 +35,9 @@
 <br>
 <br>
 <br>
-Uitleg over de toepassingen
+Uitleg over de logischelaag
 <br>
 <br>
-1. Wat is de toepassingenlaag ? 
+1. Wat is de logischelaag ? 
 </body>
 </html>
