--- a/toepassingenlaag.html
+++ b/toepassingenlaag.html
@@ -35,6 +35,9 @@
     <br>
     <br>
     <br>
-    toepassingen
+    Uitleg over de toepassingenlaag
+    <br>
+    <br>
+    1. Wat is de toepassingenlaag ? 
 </body>
 </html>
