--- a/geheugen.html
+++ b/geheugen.html
@@ -35,7 +35,10 @@
 <br>
 <br>
 <br>
-
-    geheugen
+Uitleg over het geheugen van een computer 
+<br>
+<br>
+1. Wat is het geheugen van een computer ? 
+</body>
 </body>
 </html>
